@@ -77,6 +77,8 @@ setting-open_fluid_hotkey-tooltip=If enabled, using the Recipe Book hotkey while
 setting-open_fluid_hotkey=Open selected fluid on hotkey [img=info]
 setting-open_item_hotkey-tooltip=If enabled, using the Recipe Book hotkey while holding an item will open that item's material page, if it exists.\nYou can also do this by clicking the RB shortcut while holding an item.
 setting-open_item_hotkey=Open held item on hotkey [img=info]
+setting-preserve_session-tooltip=If checked, opening the Recipe Book will pick up where you left off. If unchecked, the home page will be shown instead.
+setting-preserve_session=Preserve session [img=info]
 setting-show_alternate_name-tooltip=The object's alternate (internal) name will be shown in the object's tooltip. If `use internal names` is enabled, this will show the regular (localised) name.
 setting-show_alternate_name=Show alternate name [img=info]
 setting-show_detailed_recipe_tooltips-tooltip=If enabled, a recipe's crafting time, ingredients, and products will be shown in its tooltip. Turn this off if searching causes performance problems.
