@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.4.0
 Date: ????
+  Features:
+    - Added a setting to show the home page when opening the Recipe Book instead of picking up where you left off
   Changes:
     - Updated the mod to the new flib `gui-beta` module
     - Removed per-player settings from the mod settings menu - use the mod's built-in settings GUI instead
